--- a/GeoAnswer/app/src/main/res/values/strings.xml
+++ b/GeoAnswer/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">GeoAnswer</string>
     <string name="title_activity_maps">Map</string>
+    <string name="title_activity_question_view">QuestionView</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="answer_prompt">Answer here..</string>
 </resources>
