--- a/GeoAnswer/app/src/main/res/values/strings.xml
+++ b/GeoAnswer/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="answer_prompt">Answer here..</string>
+    <string name="ask_prompt">Ask here...</string>
 </resources>
